apps/transmission/deployment-transmission.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: transmission
  name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - image: lscr.io/linuxserver/transmission:4.1.3
          name: transmission
          resources:
            requests:
              memory: 160Mi
          ports:
            - containerPort: 9091
              protocol: TCP
              name: webui
            - containerPort: 51413
              protocol: TCP
              name: torrent
            - containerPort: 51413
              protocol: UDP
              name: torrent-udp
          volumeMounts:
            - mountPath: /config
              name: transmission
            - mountPath: /data/downloads
              name: library
              subPath: "downloads"

        - image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.4
          name: oauth2-proxy
          args:
                - --provider=oidc
                - --provider-display-name=Authentik
                - --oidc-issuer-url=https://sso.almothana.sa/application/o/transmission/
                - --upstream=http://localhost:9091
                - --http-address=0.0.0.0:4180
                - --redirect-url=https://transmission.almothana.xyz/oauth2/callback
                - --email-domain=*
                - --insecure-oidc-allow-unverified-email=true
          # memory request = ~1.2x 7-day avg working set (8Mi avg, 13Mi peak)
          resources:
            requests:
              memory: 32Mi
          ports:
            - containerPort: 4180
              protocol: TCP
              name: oauth2-proxy

      restartPolicy: Always
      volumes:
        - name: transmission
          persistentVolumeClaim:
            claimName: transmission
        - name: library
          persistentVolumeClaim:
            claimName: plex-library
