apps/transmission/service-transmission.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transmission
  name: transmission
spec:
  ports:
    - name: oauth2-proxy
      port: 4180
      targetPort: 4180
  selector:
    app: transmission
